crates/config/src/snapshots/config__config_file__tests__config_parse_reads_every_table@device.snap
---
source: crates/config/src/config_file.rs
assertion_line: 183
expression: config
---
ConfigToml {
    music_dir: None,
    theme: Auto,
    volume: Percent(
        50,
    ),
    audio: TomlAudio {
        crossfade: Crossfade(
            0ns,
        ),
        replay_gain: Off,
        device: Named(
            DeviceName(
                "Speakers",
            ),
        ),
        sleep_presets: SleepPresets(
            [
                900s,
                1800s,
                3600s,
            ],
        ),
    },
    keymap: {},
}
