crates/config/src/snapshots/config__config_file__tests__config_parse_reads_every_table@malformed_chord.snap
---
source: crates/config/src/config_file.rs
assertion_line: 213
expression: config
---
TomlSettings {
    music_dir: None,
    theme_choice: Auto,
    volume: Percent(
        50,
    ),
    audio: TomlAudio {
        crossfade: Crossfade(
            0ns,
        ),
        replay_gain: Off,
        device: SystemDefault,
        sleep_presets: SleepPresets(
            [
                900s,
                1800s,
                3600s,
            ],
        ),
    },
    keymap: {
        "next": KeyOverride {
            chord: "not-a-key",
            key_context: Global,
        },
    },
}
