crates/config/src/snapshots/config__config_file__tests__config_parse_reads_every_table@sleep_presets.snap
---
source: crates/config/src/config_file.rs
assertion_line: 183
expression: config
---
TomlSettings {
    music_dir: None,
    theme: Auto,
    volume: Percent(
        50,
    ),
    audio: TomlAudio {
        crossfade: Crossfade(
            0ns,
        ),
        replay_gain: Off,
        device: SystemDefault,
        sleep_presets: SleepPresets(
            [
                600s,
                1200s,
            ],
        ),
    },
    keymap: {},
}
