crates/config/src/snapshots/config__config_file__tests__unknown_toml_names_the_key@unknown_key.snap
---
source: crates/config/src/config_file.rs
expression: error.to_string()
---
unknown field `bogus`, expected one of `crossfade`, `replaygain`, `device`, `sleep_presets`
config.toml:2
