crates/config/src/snapshots/config__config_file__tests__unknown_toml_names_the_key@unknown_table.snap
---
source: crates/config/src/config_file.rs
expression: error.to_string()
---
unknown field `nope`, expected one of `music_dir`, `theme`, `volume`, `audio`, `keymap`
config.toml:1
